rails basic tests passing

--- a/test/fixtures/blogposts.yml
+++ b/test/fixtures/blogposts.yml
@@ -1,7 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  newpost: MyString
+  newpost: Hello!
 
-two:
-  newpost: MyString
