--- a/test/fixtures/tourdates.yml
+++ b/test/fixtures/tourdates.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  venue: MyString
+  venue: PJ Molloys
   lat: 1.5
   long: 1.5
   otherbands: MyString
