--- a/angular/package.json
+++ b/angular/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.13.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^1.13.3"
+  },
   "description": ""
 }
