--- a/angular/package.json
+++ b/angular/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "webpack": "^1.13.3"
   },
   "description": ""
