--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular-google-maps": "^2.4.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "ngmap": "^1.17.8"
   },
   "devDependencies": {
     "angular": "^1.5.8",
