--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.13.4",
+    "jquery": "^3.1.1",
     "ngmap": "^1.17.8"
   },
   "devDependencies": {
